cmake_minimum_required(VERSION 3.8)
project(CIS350_Tower_Defense)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
    .idea/CIS350-Tower-Defense.iml
    .idea/misc.xml
    .idea/modules.xml
    .idea/vcs.xml
    .idea/workspace.xml
    docs/index-files/index-1.html
    docs/index-files/index-10.html
    docs/index-files/index-11.html
    docs/index-files/index-12.html
    docs/index-files/index-2.html
    docs/index-files/index-3.html
    docs/index-files/index-4.html
    docs/index-files/index-5.html
    docs/index-files/index-6.html
    docs/index-files/index-7.html
    docs/index-files/index-8.html
    docs/index-files/index-9.html
    docs/allclasses-frame.html
    docs/allclasses-noframe.html
    docs/Base.html
    docs/constant-values.html
    docs/deprecated-list.html
    docs/help-doc.html
    docs/index.html
    docs/Map.html
    docs/Monster.html
    docs/overview-tree.html
    docs/package-frame.html
    docs/package-list
    docs/package-summary.html
    docs/package-tree.html
    docs/PaperTower.html
    docs/RockTower.html
    docs/ScissorTower.html
    docs/script.js
    docs/stylesheet.css
    docs/Tile.html
    docs/Tower.html
    resources/originals/beetle.png
    resources/originals/downToRight.png
    resources/originals/grass.png
    resources/originals/horizontal.png
    resources/originals/rightToDown.png
    resources/originals/rightToUp.png
    resources/originals/upToRight.png
    resources/originals/vertical.png
    resources/beetle.png
    resources/downToRight.png
    resources/grass.png
    resources/horizontal.png
    resources/paperTower.png
    resources/paperTowerLarge.png
    resources/rightToDown.png
    resources/rightToUp.png
    resources/rockTower.png
    resources/rockTowerLarge.png
    resources/scissorTower.png
    resources/scissorTowerLarge.png
    resources/tower.png
    resources/upToRight.png
    resources/vertical.png
    src/.idea/misc.xml
    src/.idea/modules.xml
    src/.idea/src.iml
    src/.idea/workspace.xml
    src/Base.java
    src/Game.java
    src/GUI.java
    src/Map.class
    src/Map.java
    src/Monster.class
    src/Monster.java
    src/PaperMonster.java
    src/PaperTower.java
    src/RockMonster.java
    src/RockTower.java
    src/RoundManager.java
    src/ScissorMonster.java
    src/ScissorTower.java
    src/SidebarGUI.java
    src/Tile.class
    src/Tile.java
    src/Tower.class
    src/Tower.java
    src/TowerType.java
    README.md)

add_executable(CIS350_Tower_Defense ${SOURCE_FILES})